--- a/Day4/index.html
+++ b/Day4/index.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div>
-      <input type="number" id="angka1" />
+    <title>Document</ti\
     </div>
     <div>
       <input type="number" id="angka2" />
@@ -16,17 +8,9 @@
       <button>Hitungjjj</button>
     </div>
     <div>Hasil = <span></span></div>
-
-    <!-- mencari luas segitiga -->
-
-    <img src="./img/download.jpg" />
-    <div><input type="number" id="alas" placeholder="alas" /></div>
-    <div><input type="number" id="tinggi" placeholder="tinggi" /></div>
-    <div>
       <button id="Luassegitiga">luas segitiga</button>
     </div>
-    <div>Hasil = <span id="segitiga"></span></div>
-
+    <div>Hasil =
     <script src="./script.js"></script>
   </body>
 </html>
